--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,7 +1,28 @@
-<h1>Tons of tournaments</h1>
+<h1>Tons of tournaments</h1><br>
 
 <ul>
   <% @tournaments.each do |tournament| %>
   <li><%= tournament.name %></li>
   <% end %>
 </ul>
+
+
+<div class="row">
+
+  <div class="col-md-6"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello<br>world</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+  <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
+
+
+
+</div>
