--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap"
+
+.blue
+    background-color: blue
+    height: 40px
+
+.green
+    background-color: green
+    height: 40px
+
+.red
+    background-color: red
+    height: 40px
