--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -9,7 +9,7 @@
 
 <div class="row">
 
-  <div class="col-md-6"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello<br>world</a></div>
+  <div class="col-md-6"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
   <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
   <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
   <div class="col-md-3"><a href="#" class="thumbnail"><img src="http://goo.gl/JrWrnz">Hello</a></div>
