--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -2,7 +2,7 @@
 
 
 
-<div class="row">
+<div class="row hidden">
 
   <% @tournaments.each do |tournament| %>
   <div class="col-md-3"><a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="http://goo.gl/JrWrnz"><div class="info"><%= tournament.name %></div></a></div>
