--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,6 +1,6 @@
 <h1>here is a tournament</h1>
 
 <%= @tournament.name %>
-<%= @tournament.start_date %>
+<%= @tournament.start_time %>
 <%= @tournament.end_date %>
 
