--- a/app/views/timertests/index.html.erb
+++ b/app/views/timertests/index.html.erb
@@ -1,12 +1,14 @@
 <center>
-	<h1> Fugly Countdown Timer</h1>
+	<div style="width: 50%; background-color: #00ecb9; border-radius: 7px; color: white;">
+	<h1>Countdown Clock</h1>
 
 	<p>
 		<div id="clockdiv">
-    		Days: <span class="days"></span><br>
-    		Hours: <span class="hours"></span><br>
-    		Minutes: <span class="minutes"></span><br>
-    		Seconds: <span class="seconds"></span>
+    		<div>Days: <span class="days"></span></div>
+    		<div>Hours: <span class="hours"></span></div>
+    		<div>Minutes: <span class="minutes"></span><div>
+    		<div>Seconds: <span class="seconds"></span></div>
 		</div>
 	</p>
+	</div>
 </center>
