--- a/app/views/timertests/index.html.erb
+++ b/app/views/timertests/index.html.erb
@@ -1,14 +1,19 @@
-<center>
-	<div style="width: 50%; background-color: #00ecb9; border-radius: 7px; color: white;">
-	<h1>Countdown Clock</h1>
-
-	<p>
-		<div id="clockdiv">
-    		<div>Days: <span class="days"></span></div>
-    		<div>Hours: <span class="hours"></span></div>
-    		<div>Minutes: <span class="minutes"></span><div>
-    		<div>Seconds: <span class="seconds"></span></div>
-		</div>
-	</p>
-	</div>
-</center>
+<h1>Countdown Clock</h1>
+<div id="clockdiv">
+  <div>
+    <span class="days"></span>
+    <div class="smalltext">Days</div>
+  </div>
+  <div>
+    <span class="hours"></span>
+    <div class="smalltext">Hours</div>
+  </div>
+  <div>
+    <span class="minutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="seconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
