--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -14,8 +14,8 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets"
-@import "bootstrap"
+// @import "bootstrap-sprockets"
+// @import "bootstrap"
 
 .blue
     background-color: blue
