--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5002,16 +5002,17 @@ a.badge:focus {
   }
 }
 .thumbnail {
+  margin-bottom: 10px;
   display: block;
-  padding: 4px;
+  /* Edited */ padding: 0px;
   margin-bottom: 20px;
   line-height: 1.42857143;
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  /* Edited border: 1px solid #ddd;*/
+  /*  border-radius: 4px;
   -webkit-transition: border .2s ease-in-out;
        -o-transition: border .2s ease-in-out;
-          transition: border .2s ease-in-out;
+          transition: border .2s ease-in-out;*/
 }
 .thumbnail > img,
 .thumbnail a > img {
