--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,18 +1,26 @@
-<h1>Tons of tournaments</h1><br>
-
+<h1>Tournaments</h1><br>
 
 <div class="row">
   <% @tournaments.each do |tournament| %>
-  <div class="col-md-3"><a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="http://goo.gl/JrWrnz"><div class="info"><%= tournament.name %></div></a></div>
+  <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+    <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="http://goo.gl/JrWrnz">
+    </a>
+    <h4>
+      <a href="#"><%= tournament.name%></a>
+    </h4>
+    <p>Description</p>
+  </div>
   <% end %>
 </div>
 
-<%= month_calendar events: @tournaments do |date, tournaments| %>
-  <%= date %>
+<br><hr><br>
 
-  <% tournaments.each do |tournament| %>
-    <div>
-      <%= tournament.name %>
-    </div>
-  <% end %>
+<%= month_calendar events: @tournaments do |date, tournaments| %>
+<%= date %>
+
+<% tournaments.each do |tournament| %>
+<div>
+  <%= tournament.name %>
+</div>
+<% end %>
 <% end %>
