--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <%= link_to "log in", new_user_session_path, class: "btn btn-primary" %>
+        <%= link_to "log in", user_omniauth_authorize_path(:google_oauth2), class: "btn btn-primary" %>
         <li><a href="#">Grid</a></li>
         <li><a href="#">Calendar</a></li>
       </ul>
