complete google oauth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
         <li><a href="#">Grid</a></li>
         <li><a href="#">Calendar</a></li>
         <% if user_signed_in? %>
-          <li><%= link_to('Logout', destroy_user_session_path, :method => :delete)%></li>
+          <li><%= link_to('Log out', destroy_user_session_path, :method => :delete)%></li>
         <% else %>
-          <li><%= link_to "log in", user_omniauth_authorize_path(:google_oauth2)%></p></li>
+          <li><%= link_to "log in", user_omniauth_authorize_path(:google_oauth2)%></li>
         <% end %>
       </ul>
     </div>
@@ -32,11 +32,6 @@
   <%= yield %>
 </div>
 
-<div class="footer">
-  <div class="container">
-    Footer
-  </div>
-</div>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
