--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Tournaments</h1><br>
 
+
+
 <div class="row">
   <div class="col-md-12">
 
@@ -18,6 +20,7 @@
 <br>
 
 
+<div id="div1">
 <div class="row">
   <% @tournaments.each do |tournament| %>
   <% if tournament.start_date == DateTime.now.to_date || tournament.end_date = (DateTime.now).to_date %>
@@ -40,9 +43,14 @@
   <% end %>
 </div>
 
-<h1>Listing events</h1>
-
+</div>
+<div id="div2">
+<div class="row">
+  <div class="col-md-12">
 <div id="events_calendar">
   <%= render partial: "/events/calendar", locals: {events: @tournaments} %>
 </div>
+</div>
+</div>
 <br>
+</div>
