--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,6 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <!-- Search form -->
-  <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
-    <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Items" %>
-      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead
-           of using a Rails form helper -->
-      <button class="btn" type="submit">Search</button>
-    </div>
-  <% end %>
-      <!-- end Search -->
 </head>
 <body>
 
@@ -29,6 +19,14 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if current_page_is_home? %>
+        <li>  <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+    <div class="input-append">
+      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Items" %>
+      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead
+           of using a Rails form helper -->
+      <button class="btn" type="submit">Search</button>
+    </div>
+  <% end %></li>
         <li><a href="#" id="showdiv1"><i class="fa fa-2x fa-th"></i></a></li>
         <li><a href="#" id="showdiv2"><i class="fa fa-2x fa-calendar"></i></a></li>
         <% end %>
@@ -53,26 +51,18 @@
 </html>
 
 <script>
-$('#showall').click(function(){
-    $('div').show();
-});
+$( document ).ready(function() {
+  $('div[id^=div]').hide();
+    $('#div1').show();
+  });
 
 $('#showdiv1').click(function(){
     $('div[id^=div]').hide();
     $('#div1').show();
 });
+
 $('#showdiv2').click(function(){
     $('div[id^=div]').hide();
     $('#div2').show();
-});
-
-$('#showdiv3').click(function(){
-    $('div[id^=div]').hide();
-    $('#div3').show();
-});
-
-$('#showdiv4').click(function(){
-    $('div[id^=div]').hide();
-    $('#div4').show();
 });
 </script>
