--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,30 +11,26 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar inverse navbar-default">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/tournaments">eSportal</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+
         <% if current_page_is_home? %>
-        <li>  <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
-    <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "span2", placeholder: "Search Items" %>
-      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead
-           of using a Rails form helper -->
-      <button class="btn" type="submit">Search</button>
-    </div>
-  <% end %></li>
-        <li><a href="#" id="showdiv1"><i class="fa fa-2x fa-th"></i></a></li>
-        <li><a href="#" id="showdiv2"><i class="fa fa-2x fa-calendar"></i></a></li>
-        <% end %>
+    <li><a><i class="fa fa-th"></i></a></li>
+    <li><a><i class="fa fa-calendar-o"></i></a></li>
+ <% end %>
+
         <% if user_signed_in? %>
           <li><%= link_to('Log out', destroy_user_session_path, :method => :delete)%></li>
         <% else %>
           <li><%= link_to "log in", user_omniauth_authorize_path(:google_oauth2)%></li>
         <% end %>
+          <li class="notice"><%= notice %></li>
+          <li class="alert"><%= alert %></li>
       </ul>
     </div>
   </div>
@@ -44,25 +40,24 @@
   <%= yield %>
 </div>
 
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
 </body>
 </html>
 
-<script>
-$( document ).ready(function() {
-  $('div[id^=div]').hide();
-    $('#div1').show();
-  });
 
-$('#showdiv1').click(function(){
-    $('div[id^=div]').hide();
-    $('#div1').show();
-});
 
-$('#showdiv2').click(function(){
-    $('div[id^=div]').hide();
-    $('#div2').show();
-});
-</script>
+ <script>
+// $( document ).ready(function() {
+//   $('div[id^=div]').hide();
+//     $('#div1').show();
+//   });
+
+// $('#showdiv1').click(function(){
+//     $('div[id^=div]').hide();
+//     $('#div1').show();
+// });
+
+// $('#showdiv2').click(function(){
+//     $('div[id^=div]').hide();
+//     $('#div2').show();
+// });
+// </script>
