--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,50 +1,73 @@
-<h1>Tournaments</h1><br>
+
 
 
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-3">
+<h1>Tournaments</h1>
+</div>
+  <div class="col-md-9">
+
 
     <div class="btn pull-right">
-       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"> Game <span class="caret"></span>
-    </button>
+       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"> Game <span class="caret"></span></button>
     </div>
     <div class="btn-group btn pull-right" role="group" aria-label="...">
     <%= link_to "Year", tournaments_path(sort_option: "year"), class: "btn btn-default" %>
     <%= link_to "Month", tournaments_path(sort_option: "month"), class: "btn btn-default" %>
     <%= link_to "Week", tournaments_path(sort_option: "week"), class: "btn btn-default" %>
     <%= link_to "Day", tournaments_path(sort_option: "day"), class: "btn btn-default" %>
+
     </div>
-  </div>
-</div>
+<div class="input-group pull-right">
+          <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+    <div class="input-append">
+      <%= text_field_tag :search, params[:search], class: "form-control span2", placeholder: "Search Items" %>
+
+
+            <span class="input-group-btn">
+        <button class="btn btn-default" type="submit">Go!</button>
+      </span>
+    </div>
+<% end %>
+
+
+  </div></div>
+
 <br>
 
-
-<div id="div1">
 <div class="row">
+
   <% @tournaments.each do |tournament| %>
-  <% if tournament.start_date == DateTime.now.to_date || tournament.end_date = (DateTime.now).to_date %>
-  <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+  <% if tournament.is_live? %>
+  <div class="col-md-12 col-sm-12 col-xs-12">
   <% else %>
-  <div class="col-md-3 col-sm-6 col-xs-12 portfolio-item">
+  <div class="col-md-4 col-sm-6 col-lg-3 col-xs-12 portfolio-item">
   <% end %>
-  <% if tournament.image %>
-    <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="<%= tournament.image %>"></a>
+  <% if tournament.image && tournament.is_live? %>
+    <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="<%= tournament.large %>"></a>
+    <% elsif tournament.image %>
+<a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="<%= tournament.image %>"></a>
   <% else %>
     <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="http://sisj.in/wp-content/uploads/2015/11/480px-Placeholder-480x270.png"></a>
   <% end %>
     <div class="info">
-    <h4>
-      <a href="#"><%= tournament.name%></a>
-    </h4>
-    <p><%= tournament.start_date %> – <%= tournament.end_date %></p>
-  </div>
+    <% if tournament.is_live? %>
+    <h3><span class="label label-success">Live</span>&nbsp;<%= tournament.name%></h3>
+    <% else %>
+    <h4><%= tournament.name%></h4>
+    <% end %>
+      <p><%= tournament.city %> – <%= tournament.start_date %> – <%= tournament.end_date %></p>
+      </p>
+    </div>
   </div>
   <% end %>
 </div>
 
-</div>
-<div id="div2">
+
+<br><br><br><br><br>
+
+
 <div class="row">
   <div class="col-md-12">
 <div id="events_calendar">
@@ -53,4 +76,3 @@
 </div>
 </div>
 <br>
-</div>
