--- a/app/views/timertests/index.html.erb
+++ b/app/views/timertests/index.html.erb
@@ -1,3 +1,9 @@
+<% t = @tournaments.last.start_date.to_s  %>
+<% t.gsub!(" UTC", "") %>
+<% parsable = t.gsub!(" ", "T") %>
+<%= parsable %>
+
+
 <h1>Countdown Clock</h1>
 <div id="clockdiv">
   <div>
@@ -68,7 +74,8 @@ $(document).ready(function(){
   initializeClock('clockdiv', deadline);
 });
 
-var deadline = "2016-08-22T00:00:00"
+
+var deadline = "<%= parsable %>";
 
 function getTimeRemaining(endtime){
   var t = Date.parse(endtime) - Date.parse(new Date());
