--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
 </head>
 <body>
 
@@ -19,10 +18,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
 
-        <% if current_page_is_home? %>
-    <li><a><i class="fa fa-th"></i></a></li>
-    <li><a><i class="fa fa-calendar-o"></i></a></li>
- <% end %>
+        <% if current_page_is_tournament? || current_page_is_calendar? %>
+        <li><a href="/tournaments"><i class="fa fa-th"></i></a></li>
+        <li><a href="/calendar"><i class="fa fa-calendar-o"></i></a></li>
+        <% end %>
 
         <% if user_signed_in? %>
           <li><%= link_to('Log out', destroy_user_session_path, :method => :delete)%></li>
@@ -42,22 +41,3 @@
 
 </body>
 </html>
-
-
-
- <script>
-// $( document ).ready(function() {
-//   $('div[id^=div]').hide();
-//     $('#div1').show();
-//   });
-
-// $('#showdiv1').click(function(){
-//     $('div[id^=div]').hide();
-//     $('#div1').show();
-// });
-
-// $('#showdiv2').click(function(){
-//     $('div[id^=div]').hide();
-//     $('#div2').show();
-// });
-// </script>
