--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -31,3 +31,22 @@
 
 .info
     height: 100px
+
+$height-footer: 60px
+
+html
+    min-height: 100%
+    position: relative
+
+body
+    margin-bottom: $height-footer
+
+    #footer
+        bottom: 0
+        width: 100%
+        position: absolute
+        height: $height-footer
+        background-color: #f5f5f5
+
+    .footer-block
+        margin: 20px 0
