--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar inverse navbar-default">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/tournaments">eSportal</a>
@@ -38,6 +38,13 @@
 <div class="container">
   <%= yield %>
 </div>
+
+<div id="footer">
+    <div class="container">
+      <p class="footer-block">Place sticky footer content here.</p>
+    </div>
+  </div>
+
 
 </body>
 </html>
