--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -15,38 +15,58 @@
  */
 
 // @import "bootstrap-sprockets"
-// @import "bootstrap"
+ @import "bootstrap"
 
 .blue
-    background-color: blue
-    height: 40px
+  background-color: blue
+  height: 40px
 
 .green
-    background-color: green
-    height: 40px
+  background-color: green
+  height: 40px
 
 .red
-    background-color: red
-    height: 40px
+  background-color: red
+  height: 40px
 
 .info
-    height: 100px
+  height: 100px
 
 $height-footer: 60px
 
 html
-    min-height: 100%
-    position: relative
+  min-height: 100%
+  position: relative
 
 body
-    margin-bottom: $height-footer
+  margin-bottom: $height-footer
 
-    #footer
-        bottom: 0
-        width: 100%
-        position: absolute
-        height: $height-footer
-        background-color: #f5f5f5
+  #footer
+    bottom: 0
+    width: 100%
+    position: absolute
+    height: $height-footer
+    background-color: #f5f5f5
 
-    .footer-block
-        margin: 20px 0
+  .footer-block
+    margin: 20px 0
+
+#img_container
+  position: relative
+  display: inline-block
+  text-align: center
+
+.buttonz
+  position: absolute
+  bottom: 30px
+  right: 30px
+  width: 100px
+  height: 30px
+
+.buttony
+  position: absolute
+  bottom: 30px
+  right: 140px
+  width: 100px
+  height: 30px
+
