--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -15,7 +15,9 @@
  */
 
 // @import "bootstrap-sprockets"
- @import "bootstrap"
+// @import "bootstrap"
+
+
 
 .blue
   background-color: blue
@@ -70,3 +72,124 @@ body
   width: 100px
   height: 30px
 
+$bgDefault      : #b02018
+$bgHighlight    : #b02018
+$colDefault     : #e3e3e3
+$colHighlight   : #ffffff
+$dropDown       : false
+
+.navbar-default
+  background-color: $bgDefault
+  border-color: $bgHighlight
+
+  .navbar-brand
+    color: $colDefault
+    &:hover, &:focus
+      color: $colHighlight
+
+  .navbar-text
+    color: $colDefault
+
+  .navbar-nav
+    > li
+      > a
+        color: $colDefault
+        &:hover, &:focus
+          color: $colHighlight
+      @if $dropDown
+        > .dropdown-menu
+          background-color: $bgDefault
+          > li > a
+            color: $colDefault
+            &:hover, &:focus
+              color: $colHighlight
+              background-color: $bgHighlight
+
+          .divider
+            background-color: $bgHighlight
+    > .active
+      > a, > a:hover, > a:focus
+        color: $colHighlight
+        background-color: $bgHighlight
+    > .open
+      > a, > a:hover, > a:focus
+        color: $colHighlight
+        background-color: $bgHighlight
+
+  .navbar-toggle
+    border-color: $bgHighlight
+    &:hover, &:focus
+      background-color: $bgHighlight
+
+    .icon-bar
+      background-color: $colDefault
+
+  .navbar-collapse,
+
+  .navbar-form
+    border-color: $colDefault
+
+  .navbar-link
+    color: $colDefault
+    &:hover
+      color: $colHighlight
+@media (max-width: 767px)
+
+  .navbar-default .navbar-nav .open .dropdown-menu
+    > li > a
+      color: $colDefault
+      &:hover, &:focus
+        color: $colHighlight
+    > .active
+      > a, > a:hover, > a:focus
+        color: $colHighlight
+        background-color: $bgHighlight
+
+.navbar-brand
+  padding: 0px
+
+.navbar-brand>img
+  height: 100%
+  padding: 7px
+  width: auto
+
+.simple-calendar
+  background-color: white
+
+  .day
+    padding: 4px
+
+  .wday-0
+
+  .wday-1
+
+  .wday-2
+
+  .wday-3
+
+  .wday-4
+
+  .wday-5
+
+  .wday-6
+
+  .today
+    background-color: white
+
+  .past
+    background-color: white
+
+  .future
+    background-color: white
+
+  .start-date
+
+  .prev-month
+    background-color: white
+
+  .next-month
+
+  .current-month
+
+  .has-events
+    background-color: white
