--- a/app/views/events/_calendar.html.erb
+++ b/app/views/events/_calendar.html.erb
@@ -1,8 +1,9 @@
+<div class="container">
 <%= month_calendar events: events, previous_link: events_ajax_previous_link, next_link: events_ajax_next_link do |date, events| %>
-  <%= date %>
+  <b><%= date %></b><br>
 <% events.each do |event| %>
-<div>
-  <%= event.name %>
+  <img src="<%= event.thumbnail %>">
+  <%= event.name %><br>
+<% end %>
+<% end %>
 </div>
-<% end %>
-<% end %>
