--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/tournaments">eSportal</a>
+      <a class="navbar-brand" href="/tournaments">
+        <%= image_tag("esportal.png", :alt => "rss feed") %>
+        </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -38,7 +40,8 @@
 
 <div id="footer">
     <div class="container">
-      <p class="footer-block"><span class="notice"><%= notice %></span>
+      <p class="footer-block">Make a cool footer with a bunch of useless infos
+        <span class="notice"><%= notice %></span>
           <span class="alert"><%= alert %></span></p>
     </div>
   </div>
