--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
         <li><a href="/calendar"><i class="fa fa-calendar-o"></i></a></li>
         <% end %>
         <% if user_signed_in? %>
-          <li><%= link_to('Log out', destroy_user_session_path, :method => :delete)%></li>
+          <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, :class => 'pull-right') %></li>
         <% else %>
-          <li><%= link_to "log in", user_omniauth_authorize_path(:google_oauth2)%></li>
+          <li><%= link_to('log in', user_omniauth_authorize_path(:google_oauth2), :class => 'pull-right') %></li>
         <% end %>
       </ul>
     </div>
