--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -6522,6 +6522,7 @@ button.close {
 }
 .pull-right {
   float: right !important;
+  padding-right: 0px !important;
 }
 .pull-left {
   float: left !important;
