--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row" style="padding-bottom:30px">
+<div class="row" style="padding-bottom:15px">
 
   <div class="col-md-3">
     <h3>Tournaments</h3>
@@ -35,13 +35,13 @@
   <% @tournaments.each do |tournament| %>
 
   <% if tournament.is_live? %>
-  <div class="col-md-12 col-sm-12 col-xs-12">
+  <div class="col-md-12 col-sm-12 col-xs-12 portfolio-item">
   <% else %>
   <div class="col-md-4 col-sm-6 col-lg-3 col-xs-12 portfolio-item">
   <% end %>
 
   <% if tournament.image && tournament.is_live? %>
-    <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="<%= tournament.large %>"></a>
+    <a href="/tournaments/<%=tournament.id%>" class="thumbnail" style=><img  src="<%= tournament.large %>"></a>
   <% elsif tournament.image %>
     <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img src="<%= tournament.image %>"></a>
   <% else %>
