--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -18,6 +18,14 @@
 // @import "bootstrap"
 
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic)
+
+body
+  font-family: Open Sans, sans-serif
+  background-color: #F1F1F1
+
+a
+  transition: color 0.5s ease
 
 .blue
   background-color: blue
@@ -32,7 +40,12 @@
   height: 40px
 
 .info
-  height: 100px
+  background-color: white
+  margin-bottom: 20px
+  padding: 20px
+
+.titling
+  font-size: 2rem
 
 $height-footer: 60px
 
@@ -63,14 +76,14 @@ body
   bottom: 30px
   right: 30px
   width: 100px
-  height: 30px
+  padding: 4px
 
 .buttony
   position: absolute
   bottom: 30px
   right: 140px
   width: 100px
-  height: 30px
+  padding: 4px
 
 $bgDefault      : #b02018
 $bgHighlight    : #b02018
@@ -193,3 +206,171 @@ $dropDown       : false
 
   .has-events
     background-color: white
+
+
+
+header
+  text-align: center
+  padding: 120px 0
+  background: #fff
+  color: #000
+
+  h1
+    margin: 0 0 15px 0
+    padding: 0
+    font-size: 42px
+    font-weight: normal
+
+
+  h3
+    margin: 0
+    padding: 0
+    text-transform: uppercase
+    font-size: 14px
+    font-weight: bold
+    color: #999
+    a
+      color: #09c
+      text-decoration: none
+
+      &:hover
+        color: #09c
+        text-decoration: underline
+
+
+$default_color: #ffffff
+$primary_color: #3498db
+$success_color: #2ecc71
+$info_color: #81cfe0
+$warning_color: #b02018
+$danger_color: #c0392b
+
+.btn
+  letter-spacing: 0.01em
+  font-size: 12px
+  padding: 10px 10px
+  border: none
+  border-radius: 0px
+  transition: color .1s linear, background-color .1s linear
+
+  &.btn-default
+    color: #000
+    background-color: $default_color
+    border: 1px solid darken($default_color, 10%)
+
+    &.btn-border
+      border-color: $default_color
+      color: #fff
+
+    &.btn-3d
+      box-shadow: inset 0 -2px 0 darken($default_color, 20%)
+
+    &:hover
+      background-color: darken($default_color, 10%)
+      color: #000
+
+  &.btn-primary
+    background-color: $primary_color
+
+    &.btn-border
+      border-color: $primary_color
+      color: $primary_color
+
+    &.btn-3d
+      box-shadow: inset 0 -2px 0 darken($primary_color, 20%)
+
+    &:hover
+      background-color: darken($primary_color, 10%)
+      color: #fff
+
+  &.btn-success
+    background-color: $success_color
+
+    &.btn-border
+      border-color: $success_color
+      color: $success_color
+
+    &.btn-3d
+      box-shadow: inset 0 -2px 0 darken($success_color, 20%)
+
+    &:hover
+      background-color: darken($success_color, 10%)
+      color: #fff
+
+  &.btn-info
+    background-color: $info_color
+
+    &.btn-border
+      border-color: $info_color
+      color: $info_color
+
+    &.btn-3d
+      box-shadow: inset 0 -2px 0 darken($info_color, 20%)
+
+    &:hover
+      background-color: darken($info_color, 10%)
+      color: #fff
+
+  &.btn-warning
+    background-color: $warning_color
+
+    &.btn-border
+      border-color: $warning_color
+      color: $warning_color
+
+    &.btn-3d
+      box-shadow: inset 0 -2px 0 darken($warning_color, 20%)
+
+    &:hover
+      background-color: darken($warning_color, 10%)
+      color: #fff
+
+  &.btn-danger
+    background-color: $danger_color
+
+    &.btn-border
+      border-color: $danger_color
+      color: $danger_color
+
+    &.btn-3d
+      box-shadow: inset 0 -2px 0 darken($danger_color, 20%)
+
+    &:hover
+      background-color: darken($danger_color, 10%)
+      color: #fff
+
+  &.btn-lg
+    font-size: 14px
+    padding: 17px 24px
+
+  &.btn-sm
+    padding: 9px 14px
+
+  &.btn-xs
+    font-size: 11px
+    padding: 7px 12px
+
+  &.btn-border
+    border: 1px solid
+    background: transparent
+
+  &.btn-round
+    border-radius: 40px
+
+  &.btn-square
+    border-radius: 0
+
+
+// Form Control here
+
+.form-control
+  display: block
+  width: 100%
+  padding: 8.5px 12px
+  font-size: 14px
+  line-height: 1.42857143
+  color: #555
+  background-color: #fff
+  background-image: none
+  border: 1px solid $warning_color
+  border-radius: 0px
