--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2548,29 +2548,12 @@ output {
   line-height: 1.42857143;
   color: #555;
 }
-.form-control {
-  display: block;
-  width: 100%;
-  height: 34px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 0px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
+
 .form-control:focus {
-  border-color: #66afe9;
+/*  border-color: yellow;*/
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
+/*  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px red;
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px orange;*/
 }
 .form-control::-moz-placeholder {
   color: #999;
@@ -4442,7 +4425,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     padding-top: 0;
     padding-bottom: 0;
     margin-right: 0;
-    margin-left: 0;
+    /*margin-left: 0;*/
     border: 0;
     -webkit-box-shadow: none;
             box-shadow: none;
@@ -5002,10 +4985,10 @@ a.badge:focus {
   }
 }
 .thumbnail {
-  margin-bottom: 10px;
+/*  margin-bottom: 10px;*/
   display: block;
   /* Edited */ padding: 0px;
-  margin-bottom: 20px;
+/*  margin-bottom: 20px;*/
   line-height: 1.42857143;
   background-color: #fff;
   /* Edited border: 1px solid #ddd;*/
