--- a/app/views/tournaments/index_calendar.html.erb
+++ b/app/views/tournaments/index_calendar.html.erb
@@ -1,37 +1,39 @@
 <div class="row" style="padding-bottom:15px">
 
   <div class="col-md-3">
-    <h3>Calendar</h3>
+
+    <div class="input-group">
+      <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
+      <div class="input-append">
+      <%= text_field_tag :search, params[:search], class: "form-control span2 btn-border", placeholder: "Search Items" %>
+      <span class="input-group-btn "><button class="btn btn-warning btn-border" type="submit">Go!</button></span>
+      <% end %>
+      </div>
+    </div>
+
+
   </div>
 
-    <div class="col-md-9">
+  <div class="col-md-9">
     <div class="btn pull-right">
-     <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"> Game <span class="caret"></span></button>
+     <button class="btn btn-warning btn-border dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"> Game <span class="caret"></span></button>
     </div>
 
     <div class="btn-group btn pull-right" role="group" aria-label="...">
-    <%= link_to "Year", tournaments_path(sort_option: "year"), class: "btn btn-default" %>
-    <%= link_to "Month", tournaments_path(sort_option: "month"), class: "btn btn-default" %>
-    <%= link_to "Week", tournaments_path(sort_option: "week"), class: "btn btn-default" %>
-    <%= link_to "Day", tournaments_path(sort_option: "day"), class: "btn btn-default" %>
-    </div>
-
-
-    <div class="input-group pull-right">
-      <%= form_tag(tournaments_path, :method => "get", class: "navbar-form", id: "search-form") do %>
-      <div class="input-append">
-      <%= text_field_tag :search, params[:search], class: "form-control span2", placeholder: "Search Items" %>
-      <span class="input-group-btn"><button class="btn btn-default" type="submit">Go!</button></span>
-      <% end %>
+    <%= link_to "Year", tournaments_path(sort_option: "year"), class: "btn btn-border btn-warning" %>
+    <%= link_to "Month", tournaments_path(sort_option: "month"), class: "btn btn-border btn-warning" %>
+    <%= link_to "Week", tournaments_path(sort_option: "week"), class: "btn btn-border btn-warning" %>
+    <%= link_to "Day", tournaments_path(sort_option: "day"), class: "btn btn-border btn-warning" %>
     </div>
 
   </div>
+
 </div>
 
 <div class="row">
-  <div class="col-md-12">
+
     <div id="events_calendar">
       <%= render partial: "/events/calendar", locals: {events: @tournaments} %>
     </div>
-  </div>
+
 </div>
