--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -26,8 +26,8 @@
 <div class="row">
   <div class="col-md-12 portfolio-item">
     <a href="#" class=" image_container thumbnail"><img src="<%= @tournament.large %>">
-      <button type="button" class="buttonz btn btn-default" aria-label="Left Align">Follow</button>
-      <button type="button" class="buttony btn btn-default" aria-label="Left Align">Subscribe</button>
+      <button type="button" class="buttony btn btn-default" aria-label="Left Align"><i class="fa fa-heart"></i> Follow</button>
+      <button type="button" class="buttonz btn btn-default" aria-label="Left Align"><i class="fa fa-calendar-plus-o"></i> Subscribe</button>
     </a>
   </div>
 </div>
@@ -54,5 +54,6 @@
     <% end %>
   </div>
 </div>
+
 
 
