--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -26,23 +26,15 @@
 <div class="row">
   <div class="col-md-12 portfolio-item">
     <a href="#" class=" image_container thumbnail"><img src="<%= @tournament.large %>">
-      <%=
-        button_to "Follow", favorites_path(favorite: {
-          user_id: current_user.id,
-          favoritable_id: @tournament.id,
-          favoritable_type: "Tournament"
-          }),
-        action: "create", class: "buttonz btn btn-default",
-        'aria-label' => "Left Align"
-        do
-      %>
-        <i class="fa fa-heart"></i>
+      <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @tournament.id, favoritable_type: "Tournament"}} %>
+      <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-default", 'aria-label' => "Left Align" do %>
+        <i class="fa fa-heart"></i> Follow
       <% end %>
-      <!-- <button type="button" class="buttonz btn btn-default" aria-label="Left Align">Follow</button> -->
-      <%= button_to "Subscribe", class: "buttony btn btn-default" %>
-      <!-- <button type="button" class="buttony btn btn-default" aria-label="Left Align">Subscribe</button> -->
-<!--       <button type="button" class="buttony btn btn-default" aria-label="Left Align">Follow</button>
-      <button type="button" class="buttonz btn btn-default" aria-label="Left Align"><i class="fa fa-calendar-plus-o"></i> Subscribe</button> -->
+
+      <!-- this performs the same action as the follow button above until subscription functionality is implemented -->
+      <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-default", 'aria-label' => "Left Align" do %>
+        <i class="fa fa-calendar-plus-o"></i> Subscribe
+      <% end %>
     </a>
   </div>
 </div>
