--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -41,7 +41,8 @@ a
 
 .info
   background-color: white
-  margin-bottom: 20px
+  margin-bottom: 30px
+  height: 100px
   padding: 20px
 
 .titling
@@ -374,3 +375,24 @@ $danger_color: #c0392b
   background-image: none
   border: 1px solid $warning_color
   border-radius: 0px
+
+
+// img processor
+
+img.grayscale
+  filter: url("data:image/svg+xmlutf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale") /* Firefox 3.5+, IE10 */
+  filter: gray /* IE6-9 */
+  -webkit-filter: grayscale(100%) /* Chrome 19+ & Safari 6+ */
+  -webkit-transition: all .6s ease /* Fade to color for Chrome and Safari */
+  -webkit-backface-visibility: hidden /* Fix for transition flickering */
+
+img.grayscale:hover
+  filter: none
+  -webkit-filter: grayscale(0%)
+
+svg image
+  transition: all .6s ease
+
+svg image:hover
+  opacity: 0
+
