--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -11,7 +11,6 @@
       </div>
     </div>
 
-
   </div>
 
   <div class="col-md-6 col-lg-6 col-sm-6">
@@ -31,9 +30,12 @@
 </div>
 
 
+
+
 <div class="row">
 
   <% @tournaments.each do |tournament| %>
+
 
   <% if tournament.is_live? %>
   <div class="col-md-12 col-sm-12 col-xs-12 portfolio-item">
@@ -43,7 +45,7 @@
 
   <% if tournament.image && tournament.is_live? %>
     <a href="/tournaments/<%=tournament.id%>" class="thumbnail" style=>
-      <img class="hidden-xs grayscale" src="<%= tournament.large %>">
+      <img class="hidden-xs grayscale" id="<%= tournament.id %>" src="<%= tournament.large %>">
       <img class="hidden-lg hidden-sm hidden-md grayscale" style="width:100%" src="<%= tournament.image %>">
     </a>
 
@@ -53,46 +55,61 @@
     <a href="/tournaments/<%=tournament.id%>" class="thumbnail"><img class="grayscale" src="http://sisj.in/wp-content/uploads/2015/11/480px-Placeholder-480x270.png"></a>
   <% end %>
 
-  <div class="info">
+  <div class="info" id="<%= tournament.id %>">
+    <div id="<%= tournament.id %>">
     <% if tournament.is_live? %>
     <span class="titling"><span class="label label-success">Live</span>&nbsp;<%= tournament.name%></span>
     <% else %>
     <span class="titling"><%= tournament.short_title%></span>
     <% end %>
       <br><span><%= tournament.city %> – <%= tournament.start_date %> </span>
+      <span class="hidden infohidden" maxlength="10"> <%= tournament.description %> </span>
       </p>
     </div>
   </div>
+  </div>
   <% end %>
+
 </div>
 
 
-<style>
-img.grayscale {
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
-    filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
-    -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
-    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
+
+
+
+
+<br><br>
+
+<ul>
+<li data-id="firstdiv">First div</li>
+<li data-id="seconddiv">Second div</li>
+<li data-id="thirddiv">Third div</li>
+</ul>
+
+<div id="firstdiv">Content Here</div>
+<div id="seconddiv">Content Here</div>
+<div id="thirddiv">Content Here</div>
+
+<script>
+// This is image
+
+// $('img').hover(function() {
+// console.log(this.id)
+// // this is info
+//   $(".info span").toggle();
+// });
+$('ul li').on({
+    'mouseenter':function(){
+        $('#'+$(this).data('id')).fadeIn();
+    },'mouseleave':function(){
+        $('#'+$(this).data('id')).fadeOut();
+    }
+});
+</script>
+
+<script>
+function toggler(divId) {
+    $("#" + divId).toggle();
 }
-
-img.grayscale:hover {
-    filter: none;
-    -webkit-filter: grayscale(0%);
-}
-
-svg {
-    background:url(http://4.bp.blogspot.com/-IzPWLqY4gJ0/T01CPzNb1KI/AAAAAAAACgA/_8uyj68QhFE/s400/a2cf7051-5952-4b39-aca3-4481976cb242.jpg);
-}
-
-svg image {
-    transition: all .6s ease;
-}
-
-svg image:hover {
-    opacity: 0;
-}
+</script>
 
 
-
-</style>
