--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -32,7 +32,7 @@
       <% end %>
 
       <!-- this performs the same action as the follow button above until subscription functionality is implemented -->
-      <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-default", 'aria-label' => "Left Align" do %>
+      <%= button_to favorites_path(favorite_params), action: "create", class: "buttony btn btn-default", 'aria-label' => "Left Align" do %>
         <i class="fa fa-calendar-plus-o"></i> Subscribe
       <% end %>
     </a>
