--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -44,6 +44,14 @@ a
   margin-bottom: 30px
   height: 100px
   padding: 20px
+  -webkit-box-shadow: 0 10px 6px -6px #777
+  -moz-box-shadow: 0 10px 6px -6px #777
+  box-shadow: 0 10px 6px -6px #777
+
+.infoplus
+  @extend .info
+  height: 40%
+  margin: 0px
 
 .titling
   font-size: 2rem
@@ -62,7 +70,7 @@ body
     width: 100%
     position: absolute
     height: $height-footer
-    background-color: #f5f5f5
+    background-color: white
 
   .footer-block
     margin: 20px 0
@@ -72,16 +80,23 @@ body
   display: inline-block
   text-align: center
 
+.timerz
+  position: absolute
+  top: 10px
+  left: 28px
+  width: 200px
+  padding: 4px
+
 .buttonz
   position: absolute
-  bottom: 30px
-  right: 30px
+  bottom: 10px
+  right: 28px
   width: 100px
   padding: 4px
 
 .buttony
   position: absolute
-  bottom: 30px
+  bottom: 10px
   right: 140px
   width: 100px
   padding: 4px
@@ -252,7 +267,7 @@ $danger_color: #c0392b
   padding: 10px 10px
   border: none
   border-radius: 0px
-  transition: color .1s linear, background-color .1s linear
+  transition: color .3s linear, background-color .3s linear
 
   &.btn-default
     color: #000
@@ -395,4 +410,3 @@ svg image
 
 svg image:hover
   opacity: 0
-
