--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -4,28 +4,33 @@
 <% parsable = t.gsub!(" ", "T") %>
 <script>var deadline = "<%= parsable %>";</script>
 
-<div class="row">
-  <div class="col-md-8 col-sm-12">
+
+<div class="row" style="padding-bottom:5px">
+
+  <div class="col-md-12 col-sm-12">
     <h1><%= @tournament.name %></h1>
   </div>
 
-  <div class="col-md-4 col-sm-12">
-    <span id="clockdiv" class="pull-right">
-      <h1>
-        <span class="days "></span> days /
-        <span class="hours"></span> :
-        <span class="minutes"></span> :
-        <span class="seconds"></span>
-      </h1>
-    </span>
-  </div>
+
 </div>
 
 <% javascript_include_tag "timer" %>
 
 <div class="row">
-  <div class="col-md-12 portfolio-item">
-    <a href="#" class=" image_container thumbnail"><img src="<%= @tournament.large %>">
+  <div class="col-md-12">
+  <div class="portfolio-item thumbnail">
+    <% if @tournament.image %>
+      <img class="hidden-xs" src="<%= @tournament.large %>">
+      <img class="hidden-lg hidden-sm hidden-md" src="<%= @tournament.image %>">
+    <% else %>
+  <img class="grayscale" style="max-height:200px; width:100%" src="http://www.download-free-wallpaper.com/img50/svwyzdhmpisjaqkbykpz.png">
+    <% end %>
+      <span class="timerz">
+        <span id="clockdiv">
+          <span class="days "></span> days /<span class="hours"></span> :<span class="minutes"></span> :<span class="seconds"></span>
+         </span>
+      </span>
+
       <% favorite_params = {favorite: {user_id: current_user.id, favoritable_id: @tournament.id, favoritable_type: "Tournament"}} %>
       <%= button_to favorites_path(favorite_params), action: "create", class: "buttonz btn btn-default", 'aria-label' => "Left Align" do %>
         <i class="fa fa-heart"></i> Follow
@@ -35,27 +40,43 @@
       <%= button_to favorites_path(favorite_params), action: "create", class: "buttony btn btn-default", 'aria-label' => "Left Align" do %>
         <i class="fa fa-calendar-plus-o"></i> Subscribe
       <% end %>
-    </a>
-  </div>
+</div>
+</div>
+</div>
+<div class="row infoplus">
+<div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
+  <div class="hidden-sm hidden-xs" style="border-right:1px solid black"></div>
+  <section>
+   <h2><%= @tournament.short_title %></h2>
+  </section>
+  <section>
+   <p><%= @tournament.description %></p>
+  </section>
 </div>
 
-<div class="row">
-  <div class="col-md-6">
-    <% list_competitor_names_for(@tournament).each do |competitor| %>
-      <p><%= competitor %></p><br>
-    <% end %>
-  </div>
+<div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
 
-  <div class="col-md-6">
-    <% if @tournament.streams.any? %>
+   <% if @tournament.streams.any? %>
       <% @tournament.streams.each do |stream| %>
-        <%= link_to @tournament.name, stream.link %>
+      <section>
+        <h2><%= link_to "Stream", stream.link %></h2>
+      </section>
       <% end %>
     <% else %>
+    <section>
       <p>Stream list soon</p>
+    </section>
     <% end %>
-  </div>
+       <section>
+    <% list_competitor_names_for(@tournament).each do |competitor| %>
+      <%= competitor %> /
+    <% end %>
+  <section>
 </div>
 
+</div>
+
+</div>
+</div>
 
 
